@@ -6,6 +6,7 @@
 * Fix   - Fix PHPUnit tests. Rename `test_` to `test-` to match our phpcs rules. Remove travis and move to github action.
 * Tweak - Updated .nvmrc to use 10.16.0
 * Tweak   - Update the shipping label status endpoint to accept and return multiple ids.
+* Tweak	- Display spinner icon during service data refresh.
 
 = 1.25.10 - 2021-03-24 =
 * Add   - Add an endpoint for shipping label creation eligibility and share code for store eligibility.
